--- a/js/todo
+++ b/js/todo
@@ -1,1 +1,3 @@
 while accept succeed simulate effects also in offerDB and redraw
+forget removes erases balancedb and local storagebalancedb
+only ask conf balance update when height changes
