--- a/js/todo
+++ b/js/todo
@@ -1,3 +1,3 @@
+rewrite balancemanager
 while accept succeed simulate effects also in offerDB and redraw
-forget removes erases balancedb and local storagebalancedb
 only ask conf balance update when height changes
